gobblin-kubernetes/gobblin-service/base-cluster/deployment.yaml
# In the future, build the kubernetes cluster from the official docker account
# Also ensure that proper tagging/versioning is done i.e. remove :latest tag and instead use the digest of the container

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: 'gaas'
  labels:
    app: gaas
spec:
  selector:
    matchLabels:
      app: gaas
  replicas: 3
  serviceName: 'gaas'
  template:
    metadata:
      name: 'gaas'
      labels:
        app: gaas
    spec:
      volumes:
        - name: 'shared-jobs'
          persistentVolumeClaim:
            claimName: shared-jobs-claim
        - name: flowconfig-templates
          configMap:
            name: flowconfig-templates
      containers:
        - name: gobblin-service
          image: will97/gobblin-as-a-service:latest
          volumeMounts:
            - name: shared-jobs
              mountPath: /tmp/gobblin-as-service/jobs
            - name: flowconfig-templates
              mountPath: /tmp/templateCatalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'gobblin-standalone-deployment'
  labels:
    app: gobblin-standalone-deployment
spec:
  selector:
    matchLabels:
      app: gobblin-standalone
  replicas: 1
  template:
    metadata:
      name: 'gobblin-standalone'
      labels:
        app: gobblin-standalone
    spec:
      volumes:
        - name: 'shared-jobs'
          persistentVolumeClaim:
            claimName: shared-jobs-claim
      containers:
        - name: gobblin-standalone
          image: will97/gobblin-standalone:latest
          volumeMounts:
            - name: shared-jobs
              mountPath: /tmp/gobblin-standalone/jobs
