gobblin-kubernetes/gobblin-service/base-cluster/load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaas-loadbalancer-svc
  labels:
    app: gaas-loadbalancer-svc
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: gaas-loadbalancer
