gobblin-kubernetes/gobblin-service/base-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaas-svc
  labels:
    app: gobblin-service
spec:
  ports:
    - protocol: TCP
      port: 6956
      targetPort: 6956
  clusterIP: None
  selector:
    app: gaas
