gobblin-kubernetes/gobblin-service/base-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gaas-ingress
spec:
  backend:
    serviceName: gaas-svc
    servicePort: 6956
